# derive-debug-extras

./: Cargo.toml  README.md  lib.rs
.github/workflows/: crates.yml
src/: lib.rs
tests/: test.rs
