[package]
name = "derive-debug-extras"
description = "More customisable #[derive(Debug)]"
authors = [ "Ben <kaleidawave@gmail.com>" ]
categories = [ "rust-patterns" ]
license = "MIT"
repository = "https://github.com/kaleidawave/derive-debug-extras"
version = "0.1.0"
edition = "2018"

[lib]
name = "derive_debug_extras"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.81", features = ["full", "extra-traits"] }
quote = "1.0.10"
syn-helpers = "0.1.0"
