[package]
name = "derive-debug-extras"
description = "More customisable #[derive(Debug)]"
authors = [ "Ben <kaleidawave@gmail.com>" ]
categories = [ "rust-patterns" ]
license = "MIT"
repository = "https://github.com/kaleidawave/derive-debug-extras"
version = "0.2.2"
edition = "2018"

[lib]
name = "derive_debug_extras"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn-helpers = "0.4.1"

[features]
auto-debug-single-tuple-inline = []
